[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/titillium-web/TitilliumWeb-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/tickets/ticketviewer.gd" type="Script" id=3]
[ext_resource path="res://sounds/adminhelp.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="TicketViewer" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -153.0
margin_right = 241.0
margin_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Ticket Viewer"
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.5
margin_top = -150.0
margin_right = 236.5
margin_bottom = 150.0
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -8.0
margin_bottom = -20.0
custom_constants/separation = 12

[node name="PanelContainer" type="TabContainer" parent="Panel/HBoxContainer"]
margin_right = 300.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 260 )

[node name="Your Tickets" type="ScrollContainer" parent="Panel/HBoxContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/PanelContainer/Your Tickets"]
margin_right = 292.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 312.0
margin_right = 441.0
margin_bottom = 260.0

[node name="NewTicket" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 129.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Open New Ticket"

[node name="TicketWindowContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="NewTicketDialog" type="WindowDialog" parent="."]
margin_left = -263.0
margin_top = -46.0
margin_right = 13.0
margin_bottom = 256.0
window_title = "New Ticket"

[node name="VBoxContainer" type="VBoxContainer" parent="NewTicketDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = -5.0

[node name="TicketTitleLabel" type="Label" parent="NewTicketDialog/VBoxContainer"]
margin_right = 276.0
margin_bottom = 14.0
text = "Ticket Title"

[node name="TicketTitle" type="LineEdit" parent="NewTicketDialog/VBoxContainer"]
margin_top = 18.0
margin_right = 276.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="TicketDescLabel" type="Label" parent="NewTicketDialog/VBoxContainer"]
margin_top = 46.0
margin_right = 276.0
margin_bottom = 60.0
text = "Description"

[node name="TicketDesc" type="TextEdit" parent="NewTicketDialog/VBoxContainer"]
margin_top = 64.0
margin_right = 276.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CriticalCheck" type="CheckBox" parent="NewTicketDialog/VBoxContainer"]
margin_top = 244.0
margin_right = 276.0
margin_bottom = 268.0
text = "Critical Issue "

[node name="SubmitButton" type="Button" parent="NewTicketDialog/VBoxContainer"]
margin_top = 272.0
margin_right = 276.0
margin_bottom = 292.0
text = "Open Ticket"

[node name="TicketNotif" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="about_to_show" from="." to="." method="_on_TicketViewer_about_to_show"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/NewTicket" to="." method="_on_NewTicket_pressed"]
[connection signal="focus_entered" from="NewTicketDialog/VBoxContainer/TicketTitle" to="." method="_on_TicketTitle_focus_entered"]
[connection signal="focus_exited" from="NewTicketDialog/VBoxContainer/TicketTitle" to="." method="_on_TicketTitle_focus_exited"]
[connection signal="focus_entered" from="NewTicketDialog/VBoxContainer/TicketDesc" to="." method="_on_TicketDesc_focus_entered"]
[connection signal="focus_exited" from="NewTicketDialog/VBoxContainer/TicketDesc" to="." method="_on_TicketDesc_focus_exited"]
[connection signal="pressed" from="NewTicketDialog/VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
